--- a/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj
+++ b/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj
@@ -128,23 +128,29 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\include\stb_image.c" />
+    <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Display.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="Transform.cpp" />
     <ClCompile Include="Vertex.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\include\stb_image.h" />
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="Display.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="Texture.h" />
+    <ClInclude Include="Transform.h" />
     <ClInclude Include="Vertex.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\res\basicShader.fs" />
+    <None Include="..\res\basicShader.fs">
+      <FileType>Document</FileType>
+    </None>
     <None Include="..\res\basicShader.vs" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
