--- a/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
+++ b/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClCompile Include="..\include\stb_image.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Transform.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Camera.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Display.h">
@@ -59,12 +65,18 @@
     <ClInclude Include="..\include\stb_image.h">
       <Filter>Source Files</Filter>
     </ClInclude>
+    <ClInclude Include="Transform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Camera.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\res\basicShader.fs">
+    <None Include="..\res\basicShader.vs">
       <Filter>Shaders</Filter>
     </None>
-    <None Include="..\res\basicShader.vs">
+    <None Include="..\res\basicShader.fs">
       <Filter>Shaders</Filter>
     </None>
   </ItemGroup>
