Getting things ready to support multiple lights in one scene.
Still having problems with the model matrix though.

--- a/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj
+++ b/OpenGLTutorial/OpenGLTutorial/OpenGLTutorial.vcxproj
@@ -130,6 +130,8 @@
     <ClCompile Include="..\include\stb_image.c" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Display.cpp" />
+    <ClCompile Include="Light.cpp" />
+    <ClCompile Include="LightManager.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="OBJLoader.cpp" />
@@ -142,6 +144,8 @@
     <ClInclude Include="..\include\stb_image.h" />
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Display.h" />
+    <ClInclude Include="Light.h" />
+    <ClInclude Include="LightManager.h" />
     <ClInclude Include="Mesh.h" />
     <ClInclude Include="OBJloader.h" />
     <ClInclude Include="Shader.h" />
